# SpeckKitTest

./: .gitignore  AGENTS.md  README.md
backend/: pyproject.toml
backend/scripts/: validate_openapi.py
backend/src/app/: __init__.py
backend/src/app/analysis/: __init__.py  fixture_adapter.py
backend/src/app/api/: __init__.py  briefs.py  content.py  evidence.py  generation.py  insight_sets.py  insights.py  main.py  workspaces.py
backend/src/app/application/: __init__.py  brief_export_service.py  brief_policy.py  brief_service.py  content_validation.py  evidence_service.py  generation_service.py  insight_query_service.py
backend/src/app/config/: settings.py
backend/src/app/domain/: __init__.py  brief.py  content_item.py  (+2 more)
backend/tests/contract/: test_brief_share_export_contract.py  test_evidence_openapi_contract.py  test_us1_openapi_contract.py  test_us2_openapi_contract.py  test_us3_openapi_contract.py
backend/tests/fixtures/: content_items.json  performance_workspace.json
backend/tests/integration/: test_generation_performance.py
backend/tests/regression/: test_brief_provenance.py  test_brief_share_export_provenance.py  test_duplicate_filtering.py  test_partial_generation.py  test_provenance_retention.py  test_restricted_source_warning.py  test_review_preserves_evidence.py
backend/tests/unit/: test_brief_citations.py  test_brief_policy.py  test_brief_rules.py  test_content_limits.py  test_content_validation.py  test_evidence_reference.py  test_generation_service.py  test_insight_query_service.py  test_insight_review.py  test_insight_rules.py
(+95 files in other folders)
